# cowsim

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
source/cowsim/: __init__.py
source/cowsim/cli/: __init__.py  run.py
source/cowsim/engine/: __init__.py  config.py
source/cowsim/entity/: __init__.py
source/cowsim/entity/cow/: __init__.py  purple_angus.py
source/cowsim/environment/: __init__.py  cowpen.py
source/cowsim/utils/: __init__.py  color.py  logger.py  named_abc.py
tests/cowsim/: meaning_of_life_test.py
tests/cowsim/entity/: cow_test.py
tests/cowsim/environment/: cowpen_test.py
